# elearning

./: .gitignore  README.md  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  requirements.txt
course/: admin.py  forms.py  models.py  serializers.py  task.py  tests.py  urls.py  views.py
course/migrations/: 0001_initial.py  0002_enrollment.py  0003_course_status.py  0004_instructor.py  0005_rating.py  0006_module.py  0007_material.py  0008_readingmaterial_videomaterial.py  0009_progress.py  0010_alter_readingmaterial_file.py  0011_fts_search.py  0012_videomaterial_transcript.py
course/templates/: courses.html  create.html  detail.html  material.html
course/templates/materials/: overview.html  (+4 more)
course/templatetags/: enroll.py  progress.py
elearning/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
message/: consumers.py  models.py  tests.py  urls.py  views.py
message/migrations/: 0001_initial.py  0002_alter_message_sender.py
message/templates/: call.html  message.html  threads.html
notification/: apps.py  consumers.py  models.py  signals.py  tests.py  urlpatterns.py  urls.py
notification/migrations/: 0001_initial.py  0002_alter_notifications_notification_type.py
notification/templatetags/: notification.py
people/: admin.py  forms.py  mixin.py  models.py  serializers.py  tests.py  urls.py  views.py
people/migrations/: 0001_initial.py  0002_userprofile_location_alter_user_role.py  0003_status.py
people/templates/: dashboard.html  profile.html
people/templatetags/: progress.py  progress_percentage.py  role_check.py
templates/: base.html
(+11 files in other folders)
